--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	</div> -->
 	<div class="content">
-		<h1>
+		<h1 class="sitename">
 			трусики
 		</h1>
 
@@ -26,7 +26,7 @@
 			<img src="../TRIXY/img/footer-logo 1.png" alt="oh">
 		</div>
 		<div class="rest">
-			это прямоугольник
+			
 		</div>
 		<div class="link">
 			<a target="_blank" href="https://nixybrand.ru/">https://nixybrand.ru/</a>
