--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
 </head>
 
 <body>
-	<!-- <div class="wrapper">
-		
-	</div> -->
-	<!-- <div class="container">
-
+	
 	</div> -->
 	<div class="content">
 		<h1 class="sitename">
@@ -29,7 +25,7 @@
 			
 		</div>
 		<div class="link">
-			<a target="_blank" href="https://nixybrand.ru/">https://nixybrand.ru/</a>
+			<a class="linkname" target="_blank" href="https://nixybrand.ru/">https://nixybrand.ru/</a>
 		</div>
 		<div class="text">
 			<p>
