--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 		</div>
 		<div class="text">
 			<p>
-				шрифт<span> gilroy</span>
+				шрифт<span class="textword"> gilroy</span>
 			</p>
 			<p>
-				Light<br><span> Extra Bold</span>
+				Light<br><span class="textword"> Extra Bold</span>
 
 			</p>
 		</div>
